# stat-metrics-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/regression/: mae.rs  mape.rs  mod.rs  mse.rs  r2.rs  rmsle.rs
src/utils/: math.rs  mod.rs
